sass/components/_nmu.scss
/**
 * @file
 * SMACSS Modules - NMU Specific
 *
 * Adds modular sets of styles.
 *
 * Additional useful selectors can be found in Zen's online documentation.
 * https://drupal.org/node/1707736
 *
 *	NMU Fonts
 * $humanist-roman -serif
 *	$humanist-black
 *	$avenir-medium - sanserif
 *	$avenir-black
 *
 */


/**
 * Development Classes.
 */

.bg-blue {background:blue;}
.bg-green {background:greed;}
.bg-yellow {background:yellow;}
.bg-gray {background:gray;}
.bg-orange {background:orange;}
.bg-red {background:red;}


/**
 * Drupal fixes
 */
body.logged-in .region-top-navigation .navbar-fixed-top {
	margin-top:30px;
}

body,
#page
{
	//keep everything on the page within the viewport
	//this was done to attempt to prevent the side scrolling in ios
	//does not fully work but it does trim the columns down on the homepage and force them to fit
	max-width: 100%;
	overflow-x: hidden;
}

/**
 * Body.
 */
#main {
	//this is the method I use to make the columns to always appear equal in height.
	//background-image: url(../images/nav-background.png);
	//background-repeat:repeat-y;
	.page__title {
		margin-bottom:20px;
		&::after{
			content:' ';
			display:block;
			width:20px;
			border-bottom:1px solid $nmu-gray;
			margin:20px 0 20px;
		}
	}
}

.breadcrumbs {
	color:$nmu-gray;
	a {
		color: $nmu-green-text;
		padding:0 10px;
		&:last-child{
			font-weight:600;
		}
	}
}

#content {
	//there was a background color here at one point, it has been removed to prevent the sidebar background image being clipped when zoomed in
	padding-top:1em;
	height: 100%; //make sure drupal's admin bar does not add some phantom padding to the bottom of main
	min-height:500px;
}

//styles specific to internal pages
.not-front {
	#content {

		//*** styles copied in from the old theme to fix various mobile issues
		word-wrap: break-word;
		img {
			//width:100%;  //this will blow up all images to fit into the content zone and that would be undesired  -- keep this comment
			max-width:100%;
			height:auto;
		}
		table img {
			max-width:inherit;  //this is needed for images in tables without fixed sizes.  it stops the images from shrinking down to accommodate the text
		}
		table img.gs-image {
			max-width:100%; //a special case for the google search images otherwise inherit will make them too big
		}
		img[align="left"],
		img[style*="float: left"],
		img[style*="float:left"]{
			margin-right:5px;
		}
		img[align="right"],
		img[style*="float: right"],
		img[style*="float:right"]{
			margin-left:5px;
		}
		table {
			//width:100%;  //with this option enabled, tables used for image captions take up the whole screen in mobile view  -- keep this comment
			max-width:100%;
		}
		//*** end of copied styles
	}
}

//styles specific to front pages
.front {
	#content {
		padding-top:0;  //remove the padding added for internal pages
	}
	.page__title {
		display:none;
	}
}

/* Styles used in a number of large sections spanning several homepages */
.homepage-section {
	h3 {
		margin: 5px 0;
		color: $nmu-green-text;
		text-transform: uppercase;
		font-size: 1.6em;
		font-family: $avenir-black;
		strong {
			color: $nmu-green-dark;
		}
	}
	hr { /* seperator between title and text */
		width: 1.5em;
		height: 1px;
		margin-bottom: 25px;
		border: none;
		background: $nmu-gray-light;
	}
	p {
		color: $nmu-black-dark;
		font-size: .9em;
		line-height: 2;
	}
	ul {
		font-size: .9em;
		list-style-type: none;
		padding-left: 0;
		li {
			margin: .25em;
		}
	}
	a, a:visited {
		color: $nmu-green-text;
	}
	a:hover {
		color: $nmu-black-dark;
	}
}

/**
 * Sidebar First
 */

.region-sidebar-first {

	//reset some bootstrap styles first
	.nav-pills>li>a{
		@include border-radius(0);
	}
	.nav-stacked>li+li {
		margin-top: 0px;
	}

	//apply nmu styles
	.nav-label>a {
		margin: 0 -15px;
		text-transform: uppercase;
	}
	.nav>li>a {
		margin:0 -15px;  //make the nav item box extend to the sides of the nav column
		color:$nmu-green-text;
		text-transform: uppercase;
		position: relative;
		border:1px solid $nmu-gray-yetanother;
		border-top:none;
		background-color:$nmu-gray-lightest;
		cursor: pointer;
		&:hover,
		&:active,
		&:focus{
			background-color:$nmu-gray-lighter;
		}
		&::after{
			content:'>';
			position: absolute;
			right:12px;
			top:14px;
			font-size:0.78em;
			color:$nmu-gray;
			@include transform(rotate(90deg) scale(-1, -1));  //rotate the caret so it points up and flip it with scale
			@include transition-duration(.5s);  //animate the caret movement when the active class is applied
		}
	}
	.nav-pills>li.active>a{
		background-color:$nmu-gray-lighter;
		color:$nmu-green-text;
		&:hover,
		&:active,
		&:focus{
			background-color:$nmu-gray-lighter;
			color:$nmu-green-text;
		}
		&::after{
			@include transform(rotate(90deg) scale(1, -1));  //rotate the caret so it points down when a menu is active
		}
	}
	//top label on nav menu
	.nav-label {
		margin: 0;
		padding: 0;
		font-size: 1em;
		&>a{
			display: block;
			padding: 10px 15px;
			background-color:$nmu-green;
			border:1px solid $nmu-green;  //this needs a border to keep it lined up with the other elements in the sidebar
			color:white;
			text-decoration: none;
			&:hover, &:focus {
				background-color: $nmu-green;
				color:white;
			}
			&::after{
				content:none;  //make sure the caret does not show in the nav-label
			}
		}
	}

  //secondary nav menu
	.nav>li>ul {
		padding:0;
		margin:0 -15px;
		padding:20px 15px;
		border:1px solid $nmu-gray-yetanother;
		border-top:none;
	}
	.nav>li>ul>li {
		text-transform: none;
		list-style:none;
		padding:5px 5px 0;
		&:first-child{
			padding-top:0;
		}
		&>a {
			color:$nmu-green-text;
		}
	}
	
	/* responsive sidebar */
	@media all and #{$mq-bootstrap-sm-max} {
		.nav-label a {
			cursor:pointer;
			font-size: 2em;
		}
		.nav-stacked {
			display: none;
			&.expanded {
				display: block;
			}
		}
	}
	@media all and #{$mq-bootstrap-md-min} {
		.nav-label a .glyphicon {
			display: none; /* hide menu icon in desktop */
		}
	}
}


/**
 * Generic Classes.
 */

 //this is nmu's bootstrap helper class.  we can't use bootstraps 12 column class on the main body area because it breaks the homepage video
 //so this is just a basic replacement to give most of the same styles without the relative position
.col-md-12-nmu {
 //everything removed because I don't know if we need this or not
 //padding-right:15px;
 //padding-left:15px;
 //width:100%;
 //@media all and #{$mq-bootstrap-md-min} {
 	//float:left;
 //}
}

.allcaps {
	text-transform:uppercase;
}

.sm-break {
	display:inline;
	@media all and #{$mq-bootstrap-sm-min} {
		display:block;
	}
}
.xs-break {
display:block;
	@media all and #{$mq-bootstrap-sm-min} {
		display:inline;
	}
}

.field-name-field-nav-expand {
	display:none;
}

